# mqttsuite

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE-MIT  README.md  mapfile.json  mapfile.json.experiment
certs/: IoT-Hagenberg-Client-Cert-Chain.crt  IoT-Hagenberg-Client-Cert.key  IoT-Hagenberg-Root-CA.crt  IoT-Hagenberg-Root-CA.key  IoT-Hagenberg-Server-Cert-Chain.crt  IoT-Hagenberg-Server-Cert.key  SNodeC-Certificate-CA.xca.xdb
cmake/: clang-format.cmake  cmake-format.cmake  css-format.cmake  doxygen.cmake  format.cmake  iwyu.cmake  js-format.cmake  uninstall.cmake
docs/: Doxygen.in  mqttstore-user-guide.md
lib/: CMakeLists.txt  ConfigApplication.cpp  ConfigApplication.h  JsonMappingReader.cpp  JsonMappingReader.h  MappingAdminRouter.cpp  MappingAdminRouter.h  MqttMapper.cpp  MqttMapper.h  MqttMapperPlugin.cpp  MqttMapperPlugin.h  inja.hpp  mapping-schema.json
lib/cmake/: recreate-mapping-schema-json-h.cmake
lib/json-schema-validator/: CMakeLists.txt
lib/json-schema-validator/src/: json-validator.cpp
lib/plugins/: CMakeLists.txt
lib/plugins/double/: CMakeLists.txt  Double.cpp
lib/plugins/storage/: CMakeLists.txt  Storage.cpp  Storage.h
misc/: owrt-install
mqtt/: CMakeLists.txt  SocketContextFactory.cpp  SocketContextFactory.h  mqtt.cpp
mqttbridge/: BridgeConfigLoader.cpp  BridgeConfigLoader.h  CMakeLists.txt  ConfigBridge.cpp  ConfigBridge.h  SocketContextFactory.cpp  SocketContextFactory.h  bridge-schema.json  config.json  iot-config.json  mqttbridge.cpp  wsmqttbridge.cpp
mqttbridge/cmake/: config.h.in
mqttbridge/html/: index.html
mqttbridge/html/assets/: index--yekuPXx.css  index-4bWoAvH1.css  index-B04FLeRp.js  index-B2fC44lK.js  index-BIWtlmlS.js  index-BLK2owLG.js  index-BN1Pkv_H.js  index-BTUrXZeC.css  index-BZIV1359.js  index-BeaxbFoe.css  index-Bq989wEL.js  index-BxYgfnMW.js  index-ByG8VTgU.css  index-C2ZCJSkR.css  index-CI-fa0IP.js  index-CM41341f.css  index-CUPWVlOa.js  index-CXw_yLP4.js  index-CXzWyX30.js  index-CYy7i9wj.js  index-CjfM5Mza.js  index-CqQgiCwd.js  index-CvMfoI0h.js  index-CxKQ75N4.js  index-DASkQ9UX.js  index-DKLogyaT.js  index-DLRqBUH2.js  index-DN0fyW7T.js  index-DPtQNwBL.js  index-DUhV-lGo.css  index-D_0gkY08.css  index-Day8UHn0.js  index-DbF1s1P5.js  index-DldjFvqf.js  index-DrTp8Abh.js  index-EEPyFPLl.js  index-G4y8Bsxa.js  index-S_Cyal1x.js  index-_cGM583c.css  index-a9V1JeRr.js  (+6 more)
mqttbridge/lib/: Bridge.cpp  Bridge.h  BridgeConfigLoader.cpp  BridgeConfigLoader.h  BridgeStore.cpp  BridgeStore.h  Broker.cpp  Broker.h  CMakeLists.txt  Mqtt.cpp  Mqtt.h  SSEDistributor.cpp  SSEDistributor.h  bridge-schema.json
mqttbridge/lib/cmake/: recreate-bridge-schema-json-h.cmake
mqttbridge/websocket/: CMakeLists.txt  SubProtocolFactory.cpp  SubProtocolFactory.h
mqttbroker/: CMakeLists.txt  SharedSocketContextFactory.cpp  SharedSocketContextFactory.h  SocketContextFactory.cpp  SocketContextFactory.h  mqttbroker.cpp
mqttbroker/cmake/: config.h.in
mqttbroker/html/: DetailPage.html  Footer.html  OverviewPage.html  Spinner.html  TableFixHeader.html  TopicsTree.html  index.html  mqtt-dashboard.css  mqtt-dashboard.js
mqttbroker/html/css/: Base.css  TableFixHeader.css  TableLayoutFixed.css  TopicsTree.css
mqttbroker/html/js/: ConnectedClients.js  DisconnectClient.js  TopicsTree.js  UpdateDuration.js
mqttbroker/html/widgets/: ConnectedClients.html  ConnectionAttributes.html  FoldableTable.html  RetainedList.html  Spinner.html  SpinnerOnLoad.html  Subscribe.html  SubscribedTopics.html  SubscriptionList.html  Table.html  TableFixHeader.html  TableFixHeaderFixed.html  TopicsTree.html
mqttbroker/html/widgets/css/: FoldableTable.css  Layout-OneTwo-Resizable.css  Layout-sOnesOnefOne.css  ListTable.css  RetainedList.css  Spinner.css  Subscribe.css  SubscribedTopics.css  SubscribedTopicsTable.css  SubscriptionList.css  Table.css  TableFixHeader.css  TopicsTable.css  TopicsTree.css
mqttbroker/html/widgets/js/: DisconnectClient.js  FoldableTable.js  Layout-OneTwo-Resizable.js  Release.js  Spinner.js  Subscribe.js  TopicsTable.js  TopicsTree.js  UnSubscribe.js
mqttbroker/lib/: CMakeLists.txt  Mqtt.cpp  Mqtt.h  MqttModel.cpp  MqttModel.h  SharedSocketContextFactory.cpp  SharedSocketContextFactory.h
mqttbroker/websocket/: CMakeLists.txt  SubProtocolFactory.cpp  SubProtocolFactory.h
mqttcli/: CMakeLists.txt  ConfigSections.cpp  ConfigSections.h  SocketContextFactory.cpp  SocketContextFactory.h  mqttcli.cpp
mqttcli/html/: dashboard.css  dashboard.js  index.html
mqttcli/lib/: CMakeLists.txt  ConfigSections.cpp  ConfigSections.h  DashboardModel.cpp  DashboardModel.h  Mqtt.cpp  Mqtt.h  TtnUplink.cpp  TtnUplink.h
mqttcli/websocket/: CMakeLists.txt  SubProtocolFactory.cpp  SubProtocolFactory.h
mqttintegrator/: CMakeLists.txt  SocketContextFactory.cpp  SocketContextFactory.h  mqttintegrator.cpp  wsmqttintegrator.cpp
mqttintegrator/APIs/SofaBatton/: MQTTCommands  blueprint
mqttintegrator/admin/: AdminRouter.cpp  AdminRouter.h  MappingStore.cpp  MappingStore.h
mqttintegrator/cmake/: config.h.in
mqttintegrator/lib/: CMakeLists.txt  Mqtt.cpp  Mqtt.h  SocketContextFactory.cpp
mqttintegrator/websocket/: CMakeLists.txt  SubProtocolFactory.cpp  SubProtocolFactory.h
mqttorchestrator/: CMakeLists.txt  mqttorchestrator.cpp
mqttorchestrator/html/: index.html
mqttorchestrator/lib/: CMakeLists.txt  Engine.cpp  Engine.h
mqttpub/: CMakeLists.txt  SocketContextFactory.cpp  SocketContextFactory.h  mqttpub.cpp
mqttstore/: CMakeLists.txt  SocketContextFactory.cpp  SocketContextFactory.h  mqttstore-projections.json  mqttstore.cpp
mqttstore/cmake/: config.h.in
mqttstore/lib/: CMakeLists.txt  ConfigSections.cpp  ConfigSections.h  MariaDbRawStore.cpp  MariaDbRawStore.h  MariaDbStorage.cpp  MariaDbStorage.h  MariaDbStore.cpp  MariaDbStore.h  Mqtt.cpp  Mqtt.h  MqttMessage.h  RawMessage.h  Storage.cpp  Storage.h  StoragePlan.cpp  StoragePlan.h  projection-schema.json
mqttstore/lib/cmake/: recreate-projection-schema-json-h.cmake
mqttstore/websocket/: CMakeLists.txt  SubProtocolFactory.cpp  SubProtocolFactory.h
(+31 files in other folders)
